--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/figlet": "^1.5.6",
+    "@types/node": "^20.6.0",
+    "@types/readline-sync": "^1.4.4",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "test": "bun run index.ts"
+    "start": "bun run index.ts"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "figlet": "^1.6.0",
+    "readline": "^1.3.0"
   }
 }
